add new rpc method SetPriorityChannels
