# backend/Api_Gateway/api/gen/v1/ApiService.swagger.json
@@ -79,6 +79,38 @@
           "ApiService"
         ]
       }
+    },
+    "/v1/set_priority_channels": {
+      "post": {
+        "operationId": "ApiService_SetPriorityChannels",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1SetPriorityChannelsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1SetPriorityChannelsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "ApiService"
+        ]
+      }
     }
   },
   "definitions": {
@@ -157,6 +189,27 @@
       "properties": {
         "token": {
           "type": "string"
+        }
+      }
+    },
+    "v1SetPriorityChannelsRequest": {
+      "type": "object",
+      "properties": {
+        "priorityChannels": {
+          "type": "array",
+          "items": {
+            "type": "string",
+            "format": "int64"
+          }
+        }
+      }
+    },
+    "v1SetPriorityChannelsResponse": {
+      "type": "object",
+      "properties": {
+        "status": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     }
